--- a/eas.json
+++ b/eas.json
@@ -41,9 +41,9 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "your-apple-id@example.com",
-        "ascAppId": "YOUR_APP_STORE_CONNECT_APP_ID",
-        "appleTeamId": "YOUR_APPLE_TEAM_ID"
+        "appleId": "deivisierra7@gmail.com,
+        "ascAppId": "6756152051",
+        "appleTeamId": "AL8YGQMBQG"
       },
       "android": {
         "serviceAccountKeyPath": "./path/to/api-key.json",
