ios credentials updated

--- a/eas.json
+++ b/eas.json
@@ -41,7 +41,7 @@
   "submit": {
     "production": {
       "ios": {
-        "appleId": "deivisierra7@gmail.com,
+        "appleId": "deivisierra7@gmail.com",
         "ascAppId": "6756152051",
         "appleTeamId": "AL8YGQMBQG"
       },
