--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "date-fns": "^3.0.6",
     "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.3",
+    "expo-clipboard": "~7.0.0",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
     "expo-file-system": "^19.0.19",
